# Bank/Bank.Server/Models/GetUserResp.cs
@@ -1,0 +1,12 @@
+namespace Bank.Server.Models
+{
+    public class GetUserResp
+    {
+        public string Id;
+        public string UserName;
+        public string Email;
+        public IList<string> Roles;
+        public DateTime? CreatedAt;
+        public DateTime? LastLogin;
+    }
+}
