# Bank/Bank.Server/Models/LoginResp.cs
@@ -1,0 +1,8 @@
+namespace Bank.Server.Models
+{
+    public class LoginResp
+    {
+        public string Token { get; set; }
+        public IList<string> Roles { get; set; }
+    }
+}
